syntax= "proto3";

message Cashflow {
    double int_amt= 1;
    double prin_amt= 2;
    int64 date= 3;
}

message AccountWithCashflows{
    string portfolio = 1;
    string security_name = 2;
    string instrument_id = 3;
    string instrument_type = 4;
    string isin_code = 5;
    string slr_nslr = 6;
    string category = 7;
    string category_grp = 8;
    string sub_category = 9;
    string fa_classification = 10;
    int64 maturity_date = 11;
    double coupon = 12;
    double discount_intr_rate = 13;
    double face_val_per_units = 14;
    double quantity = 15;
    double face_value = 16;
    double wap = 17;
    double yield_value = 18;
    double book_value = 19;
    double mvmnt_amount = 20;
    double market_price = 21;
    double market_yield = 22;
    double market_value = 23;
    double duration = 24;
    double m_duration = 25;
    double appreciation = 26;
    double depreciation = 27;
    double net_app_dep = 28;
    double convexity = 29;
    double pvbp = 30;
    double absolute_pvbp = 31;
    double amortization_asondate = 32;
    double accounted_amortization = 33;
    double unaccounted_amortization = 34;
    double accrued_interest = 35;
    string no_of_ca_skipped = 36;
    string ca_interest_not_receieved = 37;
    double total_interest = 38;
    string encumbered_since_repo = 39;
    double amount_repo = 40;
    string encumbered_since_ccil = 41;
    double amount_ccil = 42;
    string encumbered_since_treps = 43;
    double amount_treps = 44;
    string encumbered_since_mcxs = 45;
    double amount_mcxs = 46;
    string encumbered_since_others = 47;
    double amount_others = 48;
    string custody_pos_number = 49;
    string custody_pos_type = 50;
    string interest_frequency = 51;
    string interest_practice = 52;
    int64 put_date = 53;
    int64 call_date = 54;
    int64 last_coupon_date = 55;
    int64 next_coupon_date = 56;
    int64 issue_date = 57;
    string place = 58;
    string country = 59;
    string booking_basis = 60;
    double residual_maturity = 61;
    string issuer_name = 62;
    string market = 63;
    string gurantor = 64;
    string industry = 65;
    string sub_industry = 66;
    string borrower_category = 67;
    string asset_classification = 68;
    string asset_type = 69;
    string asset_category = 70;
    string old_security_id = 71;
    string curve1 = 72;
    string listed = 73;
    string secured = 74;
    string quoted = 75;
    string borrower = 76;
    string extbank_ref = 77;
    string pan = 78;
    string intr_rating_agency = 79;
    string internal_rating = 80;
    int64 intr_rating_valid_from = 81;
    int64 intr_rating_valid_till = 82;
    string extrn_rating_agency = 83;
    string external_rating = 84;
    int64 extrn_rating_valid_from = 85;
    int64 extrn_rating_valid_till = 86;
    string liquid_status = 87;
    string asset_sub_class = 88;
    string hurdle_rating = 89;
    string external_rating_vs_hurdle = 90;
    string internal_rating_vs_hurdle = 91;
    string fsu = 92;
    string equity_seg = 93;
    string issuer_segr = 94;
    string restructuring = 95;
    string paid_up_share_captial = 96;
    double exempted_amount = 97;
    string issuer_group = 98;
    double murram_market_value = 99;
    double murram_depr = 100;
    double var_settled_bv = 101;
    double var_unsettled_bv = 102;
    double var_settled_amount = 103;
    double var_unsettled_amount = 104;
    double kri_settled_qtd_fv = 105;
    string basel_group = 106;
    string basel_sub_group = 107;
    string time_band = 108;
    string capital_charge_market_risk_rate = 109;
    double capital_charge_market_risk_amount = 110;
    double trading_specif_risk_rate = 111;
    double banking_specif_risk_rate = 112;
    double trading_specif_risk_captial_charge = 113;
    double banking_specif_risk_captial_charge = 114;
    string mode_of_holding = 115;
    string issuer_rating_agency = 116;
    string issuer_rating = 117;
    int64 issuer_rating_valid_from = 118;
    int64 issuer_rating_valid_till = 119;
    string issuer_sub_industry = 120;
    string gl_code = 121;
    string interest_type = 122;
    int64 computed_mat_date = 123;
    string cgl = 124;
    string group = 125;
    string llg = 126;
    string currency = 127;
    string mat_date_flag = 128;
    string concat_deal_id = 129;
    string concat_inst_id = 130;
    string concat_deal_n_slr_id = 131;
    double ftp_coupon_rate = 132;
    repeated Cashflow cashflows = 133;       
}
